--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -7,6 +7,7 @@ on:
     branches: [ "main" ]
   schedule:
     - cron: '0 0 * * 1' # Run weekly on Mondays
+  workflow_dispatch: # Allow manual triggering
 
 jobs:
   analyze:
