Add API error handling and tests for authorization
Introduces API-specific error handling in SimpleAuthorize::Controller, including JSON/XML format detection and configurable error details. Updates configuration to support detailed API error responses. Adds comprehensive tests for API support, error formatting, and format detection. Updates Rubocop config to exclude OpenStruct usage in tests and complexity metrics for controller.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -34,9 +34,18 @@ Metrics/AbcSize:
   Exclude:
     - 'lib/simple_authorize/controller.rb'
 
+Metrics/CyclomaticComplexity:
+  Exclude:
+    - 'lib/simple_authorize/controller.rb'
+
 Metrics/PerceivedComplexity:
   Exclude:
     - 'lib/simple_authorize/controller.rb'
+
+# OpenStruct is fine for test mocks
+Style/OpenStructUse:
+  Exclude:
+    - 'test/**/*'
 
 # Development dependencies are fine in gemspec
 Gemspec/DevelopmentDependencies:
