Add RSpec and Minitest helpers for policy testing
Introduces RSpec matchers and Minitest assertion helpers for testing SimpleAuthorize policies. Updates gemspec and Gemfile to include RSpec as a development dependency. Adds corresponding test and spec files to verify matcher and helper behavior. Updates RuboCop config to exclude spec files from certain metrics.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,15 +13,18 @@ Style/StringLiteralsInInterpolation:
 Metrics/ClassLength:
   Exclude:
     - 'test/**/*'
+    - 'spec/**/*'
 
 Metrics/MethodLength:
   Exclude:
     - 'test/**/*'
+    - 'spec/**/*'
     - 'lib/simple_authorize/controller.rb'
 
 Metrics/BlockLength:
   Exclude:
     - 'test/**/*'
+    - 'spec/**/*'
     - '**/*.gemspec'
 
 # Controller module is legitimately large due to comprehensive authorization methods
@@ -62,3 +65,4 @@ Style/Documentation:
   Exclude:
     - 'lib/simple_authorize/configuration.rb'
     - 'test/**/*'
+    - 'spec/**/*'
