Add Overcommit git hooks and security tooling
This commit adds comprehensive pre-commit and pre-push validation:

- Add Overcommit gem for git hook management
- Configure pre-commit hooks: RuboCop, trailing whitespace, YAML syntax
- Configure pre-push hooks: RuboCop, Minitest, RSpec, TruffleHog
- Add bundler-audit security scanning to CI workflow
- Document Overcommit setup in CONTRIBUTING.md

The hooks ensure code quality and security checks run automatically
before commits reach the repository, catching issues early.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,3 +31,22 @@ jobs:
           bundler-cache: true
       - name: Run the default task
         run: bundle exec rake
+
+  security:
+    runs-on: ubuntu-latest
+    name: Security Checks
+    steps:
+      - uses: actions/checkout@v5
+        with:
+          persist-credentials: false
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.3'
+          bundler-cache: true
+      - name: Install bundler-audit
+        run: gem install bundler-audit
+      - name: Update vulnerability database
+        run: bundle audit --update
+      - name: Run bundler-audit
+        run: bundle audit check
